# gltr_page

./: .gitignore  .server_pids  README.md  pyproject.toml  setup.bat  setup.sh  start.sh  start_all.bat  start_backend.bat  start_frontend.bat  stop.sh  temp.html
.claude/: CLAUDE.md  settings.local.json
.serena/: project.yml
.serena/memories/: GLTR_Interactive_Features_2024.md  GLTR_Webtoon_Platform_Architecture.md  GLTR_Webtoon_Platform_No_Auth_Architecture.md
backend/: .env.example  auth.py  database.py  fix_all_fk.sql  fix_schema.sql  insert_test_data.py  main.py  migrate_schema.py  models.py  models_backup.py  models_updated.py  requirements.txt  reset_db.py  schemas.py  schemas_updated.py  session.py
backend/routers/: auth_router.py  chat_router.py  episodes_router.py  interactions_router.py  scenes_router.py  users_router.py  webtoons_router.py
database/: README.md  __init__.py  migration_to_scenes.sql  models.py  schema.sql  schema_updated.sql  utils.py
database/schema/: mysql_schema.sql  postgresql_schema.sql
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
scripts/: news_to_webtoon.py
webtoon-gallery/: DEPLOYMENT.md  README.md  deploy.sh  docker-compose.yml  nginx.conf
webtoon-gallery/backend/: .env  .env.example  .env.production  README_PostgreSQL.md  TEXT2CUTS_DB_SCHEMA.md  database.py  database_postgresql.py  main.py  main_postgresql.py  main_sqlite.py  models.py  models_postgresql.py  models_simple.py  requirements.txt  setup_db.py  setup_postgresql.py  (+5 more)
(+34 files in other folders)
