[project]
name = "gltr-page"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0,<2.5.0", # CUDA 12.1 지원
    "torchvision>=0.18.0",
    "torchaudio>=2.3.0",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.20",
    "pymongo>=4.14.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
